--- a/feedalerts/n4f2/templates/n4f2/index.html
+++ b/feedalerts/n4f2/templates/n4f2/index.html
@@ -20,28 +20,24 @@
 </head>
 <body>
     <div class="w3-sidebar w3-bar-block w3-black w3-card" style="width:130px">
-        <h5 class="w3-bar-item">Menu</h5>
-        <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'bad')">Error</button>
+        <h5 class="w3-bar-item tablink" onclick="openLink(event, 'Menu')">Menu</h5>
+        <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Bad')">Error</button>
         <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Late')">Late</button>
         <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Complete')">Complete</button>
+        <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'abandon')">Over 30</button>
     </div>
     <center>
         <p><h1>Feed Runs {{ feed_run_report.time_settings.localtime }}</h1></p>
-        <!-- <table class="n4f2">
-            <tr>
-                <th>Run ID</th>
-                <th>Site Name</th>
-                <th>Feed&nbsp;Date</th>
-                <th>Status Message (Code)</th>
-            </tr> -->
             {% if feedruns %}
-                <div id="bad" class="w3-container status w3-animate-left" style="display:none">
+                <div id="Bad" class="w3-container status w3-animate-left" style="display:none">
                 <table class="n4f2">
                     <tr>
-                        <th>Run ID</th>
+                        <th>Run&nbsp;ID</th>
                         <th>Site Name</th>
                         <th>Feed&nbsp;Date</th>
-                        <th>Status Message (Code)</th>
+                        <th>Status Message</th>
+                        <th>Last&nbsp;Sucessfull&nbsp;Run</th>
+                        <th>Notification&nbsp;Sent</th>
                     </tr>
                 {% for feed in feedruns %}
                 <!-- Feeds in Errored State -->    
@@ -51,6 +47,8 @@
                     <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile: {{ feed.feed_profile }}</center></td>
                     <td><center>{{ feed.last_received }}</center></td>
                     <td><center>{{ feed.status_code }}</center></td>
+                    <td><center>{{ feed.last_success }}</center></td>
+                    <td><center><input class="w3-check" type="checkbox"></center></td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -58,13 +56,13 @@
                 </div>
                 <!-- Feeds in Delayed State -->
                 <div id="Late" class="w3-container status w3-animate-left" style="display:none">
-                        <table class="n4f2">
-                                <tr>
-                                    <th>Run ID</th>
-                                    <th>Site Name</th>
-                                    <th>Feed&nbsp;Date</th>
-                                    <th>Status Message (Code)</th>
-                                </tr>
+                    <table class="n4f2">
+                        <tr>
+                            <th>Run&nbsp;ID</th>
+                            <th>Site Name</th>
+                            <th>Feed Date</th>
+                            <th>Status Message</th>
+                        </tr>
                 {% for feed in feedruns %}
                 {% if feed.status_code == "COMPLETE_LATE" %}
                 <tr class="delayed">
@@ -79,13 +77,13 @@
                 </div>
                 <!-- Feeds in Successful State -->
                 <div id="Complete" class="w3-container status w3-animate-left" style="display:none">
-                        <table class="n4f2">
-                                <tr>
-                                    <th>Run ID</th>
-                                    <th>Site Name</th>
-                                    <th>Feed&nbsp;Date</th>
-                                    <th>Status Message (Code)</th>
-                                </tr>
+                    <table class="n4f2">
+                         <tr>
+                            <th>Run&nbsp;ID</th>
+                            <th>Site Name</th>
+                            <th>Feed Date</th>
+                            <th>Status Message</th>
+                        </tr>
                 {% for feed in feedruns %}
                 {% if feed.status_code == "COMPLETE" %}
                 <tr class="ok">
@@ -98,24 +96,42 @@
                 {% endfor %}
                 </table>
                 </div>
+                <!-- Feeds over 30 days -->
+                <div id="abandon" class="w3-container status w3-animate-left" style="display:none">
+                    <table class="n4f2">
+                        <tr>
+                            <th>Run&nbsp;ID</th>
+                            <th>Site Name</th>
+                            <th>Feed Date</th>
+                            <th>Status Message</th>
+                        </tr>
+                {% for feed in lateruns %}
+                        <tr class="abandon">
+                            <td><center><a href= {{ feed.run_link }}>{{ feed.run_id }}</center></td>
+                            <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile: {{ feed.feed_profile }}</center></td>
+                            <td><center>{{ feed.last_received }}</center></td>
+                            <td><center>{{ feed.status_code }}</center></td>
+                        </tr>
+                {% endfor %}
+                    </table>
+                </div>
             {% endif %}
-        <!-- </table> -->
     </center>
     <script>
-            function openLink(evt, statusName) {
-              var i, x, tablinks;
-              x = document.getElementsByClassName("status");
-              for (i = 0; i < x.length; i++) {
-                 x[i].style.display = "none";
-              }
-              tablinks = document.getElementsByClassName("tablink");
-              for (i = 0; i < x.length; i++) {
-                 tablinks[i].className = tablinks[i].className.replace(" w3-red", "");
-              }
-              document.getElementById(statusName).style.display = "block";
-              evt.currentTarget.className += " w3-red";
-            }
-            </script>
+        function openLink(evt, statusName) {
+          var i, x, tablinks;
+          x = document.getElementsByClassName("status");
+          for (i = 0; i < x.length; i++) {
+             x[i].style.display = "none";
+          }
+          tablinks = document.getElementsByClassName("tablink");
+          for (i = 0; i < x.length; i++) {
+             tablinks[i].className = tablinks[i].className.replace(" w3-red", "");
+          }
+          document.getElementById(statusName).style.display = "block";
+          evt.currentTarget.className += " w3-red";
+        }
+    </script>
 </body>
 </html>
                     
