--- a/feedalerts/n4f2/templates/n4f2/index.html
+++ b/feedalerts/n4f2/templates/n4f2/index.html
@@ -7,7 +7,7 @@
         html {background-color: white;}
         h1 {font-family: "Times Roman", serif; font-size: 15pt; font-weight: bold;}
         body {margin: 10px; font-family: "Times Roman", serif; font-size: 10pt; color: black; background-color: white;}
-        table.n4f2 {border-collapse: collapse; border: 1px solid; border-color: #E1EEF4; width: 800px;}
+        table.n4f2 {border-collapse: collapse; border: 1px solid; border-color: #E1EEF4; width: 800px; display: inline;}
         th {font-family: "Times Roman", serif; font-size: 13pt; border: 1px solid; border-color: #E1EEF4; font-weight: bold; padding: 5px 5px; color: white; background-color: #003E5C; text-align: center;}
         td {font-family: "Times Roman", serif; font-size: 10pt; border: 1px solid; border-color: #E1EEF4; padding: 3px 3px;}
         tr.ok {background-color: #c0ffc0; border-color: #E1EEF4;}
@@ -43,10 +43,10 @@
                 {% for feed in feedruns %}   
                 {% if feed.status_code == "ERROR" or feed.status_code == "ERROR_LATE" or feed.status_code == "COMPLETE_WITH_FATAL_ERRORS_LATE" or feed.status_code == "COMPLETE_WITH_FATAL_ERRORS" %}
                 <tr class="bad">
-                    <td><center><a href= {{ feed.run_link }}>{{ feed.run_id }}</center></td>
-                    <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile: {{ feed.feed_profile }}</center></td>
+                    <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</a></center></td>
+                    <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
                     <td><center>{{ feed.last_received }}</center></td>
-                    <td><center>{{ feed.status_code }}</center></td>
+                    <td><center><a href= {{ feed.console_link }} target="_blank">{{ feed.status_code }}</a></center></td>
                     <td><center>{{ feed.last_success }}</center></td>
                     <td><center><input class="w3-check" type="checkbox"></center></td>
                 </tr>
@@ -66,8 +66,8 @@
                 {% for feed in feedruns %}
                 {% if feed.status_code == "COMPLETE_LATE" %}
                 <tr class="delayed">
-                    <td><center><a href= {{ feed.run_link }}>{{ feed.run_id }}</center></td>
-                    <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile: {{ feed.feed_profile }}</center></td>
+                    <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
+                    <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
                     <td><center>{{ feed.last_received }}</center></td>
                     <td><center>{{ feed.status_code }}</center></td>
                 </tr>
@@ -87,8 +87,8 @@
                 {% for feed in feedruns %}
                 {% if feed.status_code == "COMPLETE" %}
                 <tr class="ok">
-                    <td><center><a href= {{ feed.run_link }}>{{ feed.run_id }}</center></td>
-                    <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile: {{ feed.feed_profile }}</center></td>
+                    <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
+                    <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
                     <td><center>{{ feed.last_received }}</center></td>
                     <td><center>{{ feed.status_code }}</center></td>
                 </tr>
@@ -107,8 +107,8 @@
                         </tr>
                 {% for feed in lateruns %}
                         <tr class="abandon">
-                            <td><center><a href= {{ feed.run_link }}>{{ feed.run_id }}</center></td>
-                            <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile: {{ feed.feed_profile }}</center></td>
+                            <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</center></td>
+                            <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
                             <td><center>{{ feed.last_received }}</center></td>
                             <td><center>{{ feed.status_code }}</center></td>
                         </tr>
