Changed "Over 30" to "Abandoned"

--- a/feedalerts/n4f2/templates/n4f2/index.html
+++ b/feedalerts/n4f2/templates/n4f2/index.html
@@ -24,7 +24,7 @@
         <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Bad')">Error</button>
         <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Late')">Late</button>
         <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Complete')">Complete</button>
-        <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'abandon')">Over 30</button>
+        <button class="w3-bar-item w3-button tablink" onclick="openLink(event, 'abandon')">Abandoned</button>
         <button class="w3-bar-item w3-button tablink" onclick="window.location.href='/accounts/logout/'">Log Out</button>
     </div>
     <center>
