--- a/feedalerts/n4f2/templates/n4f2/index.html
+++ b/feedalerts/n4f2/templates/n4f2/index.html
@@ -12,7 +12,7 @@
         body {margin: 10px; font-family: "Times Roman", serif; font-size: 10pt; color: black; background-color: white;}
         table.n4f2 {border-collapse: collapse; border: 1px solid; border-color: #E1EEF4; width: 800px; display: inline;}
         th {font-family: "Times Roman", serif; font-size: 13pt; border: 1px solid; border-color: #E1EEF4; font-weight: bold; padding: 5px 5px; color: white; background-color: #003E5C; text-align: center;}
-        td {font-family: "Times Roman", serif; font-size: 10pt; border: 1px solid; border-color: #E1EEF4; padding: 3px 3px;}
+        td {font-family: "Times Roman", serif; font-size: 10pt; border: 1px solid; border-color: #E1EEF4;  padding: 0px 3px;}
         tr.ok {background-color: #c0ffc0; border-color: #E1EEF4;}
         tr.bad {font-weight: normal; color: rgb(255, 255, 255); background-color: #971b13; border-color: #ffc0c0;}
         tr.delayed {font-weight: bold; color: #404040; background-color: #F5A61D; border-color: #E1EEF4;}
@@ -47,13 +47,13 @@
                     </tr>
                 {% for feed in feedruns %}   
                 {% if feed.status_code == "ERROR" or feed.status_code == "ERROR_LATE" or feed.status_code == "COMPLETE_WITH_FATAL_ERRORS_LATE" or feed.status_code == "COMPLETE_WITH_FATAL_ERRORS" %}
-                        <tr data-toggle="collapse" data-target=#{{ feed.id }} class="bad">
+                        <tr class="bad">
                                     <td><center><a href= {{ feed.run_link }} target="_blank">{{ feed.run_id }}</a></center></td>
-                                    <td><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
+                                    <td data-toggle="collapse" data-target=#{{ feed.id }}><center><strong>{{ feed.site_name }}</strong><br>Using Feed Profile:&nbsp;{{ feed.feed_profile }}</center></td>
                                     <td><center>{{ feed.last_received }}</center></td>
                                     <td><center><a href= {{ feed.console_link }} target="_blank">{{ feed.status_code }}</a></center></td>
                                     <td><center>{{ feed.last_success }}</center></td>
-                                    <td><center><input class="w3-check" type="checkbox" name={{ feed.id }} {% if feed.notification_sent == True %} checked="checked"{% endif %}></center></td>
+                                    <td vertical-align: top;><center><input class="checkbox" type="checkbox" name={{ feed.id }} {% if feed.notification_sent == True %} checked="checked"{% endif %}></center></td>
                         </tr>
                         <tr class="bad">
                                 <td colspan="6"><div id={{ feed.id }} class="collapse">This is a test. This is only a test.</div></td>
