move inline css to static stylesheet

--- a/feedalerts/n4f2/templates/n4f2/base.html
+++ b/feedalerts/n4f2/templates/n4f2/base.html
@@ -6,21 +6,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <style type="text/css">
-            html {background-color: white;}
-            h1 {font-family: "Times Roman", serif; font-size: 15pt; font-weight: bold;}
-            body {margin: 10px; font-family: "Times Roman", serif; font-size: 10pt; color: black; background-color: white;}
-            table.n4f2 {border-collapse: collapse; border: 1px solid; border-color: #E1EEF4; width: 800px; display: inline;}
-            th {font-family: "Times Roman", serif; font-size: 13pt; border: 1px solid; border-color: #E1EEF4; font-weight: bold; padding: 5px 5px; color: white; background-color: #003E5C; text-align: center;}
-            td {font-family: "Times Roman", serif; font-size: 10pt; border: 1px solid; border-color: #E1EEF4;  padding: 0px 3px;}
-            tr.ok {background-color: #c0ffc0; border-color: #E1EEF4;}
-            tr.bad {font-weight: normal; color: rgb(255, 255, 255); background-color: #971b13; border-color: #ffc0c0;}
-            tr.delayed {font-weight: bold; color: #404040; background-color: #F5A61D; border-color: #E1EEF4;}
-            tr.abandon {color: #808080; background-color: #e0e0e0; border-color: #E1EEF4;}
-            span.sp {font-family: "Times Roman", serif; font-size: 15pt; color: #780000;}
-            table.legend {border-collapse: collapse; border: 1px solid; border-color: #E1EEF4; width: 300px;}
-        </style>
         {% load static %}
+        <link rel="stylesheet" type="text/css" href="{% static 'n4f2/style.css' %}">
     </head>
     <body>
         <div class="w3-sidebar w3-bar-block w3-black w3-card" style="width:130px">
