move w3 css to static stylesheet

--- a/feedalerts/n4f2/templates/n4f2/base.html
+++ b/feedalerts/n4f2/templates/n4f2/base.html
@@ -1,13 +1,13 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><title>N4F 2.0</title>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         {% load static %}
         <link rel="stylesheet" type="text/css" href="{% static 'n4f2/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'n4f2/w3.css' %}">
     </head>
     <body>
         <div class="w3-sidebar w3-bar-block w3-black w3-card" style="width:130px">
